# quantum

./: .gitignore  00-math.ipynb  01-qiskit-use.ipynb  01.intro.ipynb  02-teletransport.ipynb  03-mais-sobre-Hadamard.md  LICENSE  README.md  STRUCTURE.md  pyproject.toml  quantum_viz.py
.github/: copilot-instructions.md
notebooks/: 00-math.ipynb  00a-math.ipynb  00b-phases.ipynb  01-intro.ipynb  02-teletransport.ipynb  02-teletransport.qasm  03-mais-sobre-Hadamard.md  04-Hadamard-experiment.ipynb  05-deutsch-jozsa.qasm  05-interference.ipynb  05-kickback.qasm  06-grover.ipynb  06-grover.qasm  07-quantum-fourier-transform.ipynb  20-quantum-machine-learning.ipynb  20-vqc-classifier.qasm  20-vqc-tutorial.qasm
src/: README.md  __init__.py
