[project]
name = "quantum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel==6.30.1",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "plotly>=6.5.1",
    "pylatexenc>=2.10",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
